# banana_flavored

./: README.md  list.bflov  manifesto.md
banana_flavored/: CMakeLists.txt
banana_flavored/include/: bf_io.hpp  bf_vm.hpp  compiler.hpp  parser.hpp  token.hpp  tokenizer.hpp
banana_flavored/src/: compiler.cc  main.cc  parser.cc
banana_flavored/src/tokenizer/: tokenizer_impl.cc  tokenizer_iterator.cc  tokenizer_token_specific_funcs.cc
banana_flavored/test/: test_compiler.cc  test_parser.cc  test_tokenizer.cc
banana_flavored_code/: docs.bflov  functions.bflov  ternary.bflov
bfvm/: CMakeLists.txt
bfvm/include/: bf_io.hpp  bf_vm.hpp
bfvm/test/: test.cc
brainf_ck_code/: minified_mutliplication.bf  minified_optimized_mul.bf  mutliplication.bf  negation.bf  optimized_mul.bf
scripts/: minify_brainf_ck.py
